dotfiles/dot-config/waybar/style.css
@define-color color00 #2e3440;
@define-color color01 #3b4252;
@define-color color02 #434c5e;
@define-color color03 #4c566a;
@define-color color04 #d8dee9;
@define-color color05 #e5e9f0;
@define-color color06 #eceff4;
@define-color color07 #8fbcbb;
@define-color color08 #88c0d0;
@define-color color09 #81a1c1;
@define-color color10 #5e81ac;
@define-color color11 #bf616a;
@define-color color12 #d08770;
@define-color color13 #ebcb8b;
@define-color color14 #a3be8c;
@define-color color15 #ba8baf;

* {
    font-family: "JetBrainsMono Nerd Font";
    font-size: 14px;
}

window#waybar {
    background-color: @color00;
    color: @color04;
}

#workspaces button {
    padding: 0 8px;
    color: @color04;
    border-bottom: 0px solid transparent;
}

#workspaces button:hover {
    color: @color00;
    background: @color13;
}

#workspaces button.focused {
    color: @color01;
    background: @color14;
    border-radius: 0;
    border-bottom: 0px solid transparent;
}

#workspaces button.urgent {
    color: @color11;
}

#window {
    padding: 0 12px;
    color: @color13;
}

#mode {
    background: @color11;
    color: @color06;
    padding: 0 8px;
}

#network,
#battery,
#pulseaudio,
#bluetooth,
#cpu,
#memory,
#clock,
#custom-weather {
    padding: 0 10px;
}

#network {
    color: #8BE9FD;
}

#battery {
    color: #50FA7B;
}

#battery.warning {
    color: #F1FA8C;
}

#battery.critical {
    color: #FF5555;
}

#pulseaudio {
    color: #BD93F9;
}

#pulseaudio.muted {
    color: #6272A4;
}

#bluetooth {
    color: #8BE9FD;
}

#bluetooth.connected {
    color: #50FA7B;
}

#cpu {
    color: #FF79C6;
}

#memory {
    color: #FFB86C;
}

#clock {
    color: #F8F8F2;
}

#custom-weather {
    color: #F1FA8C;
}

